--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -31,7 +31,7 @@
     <div class="contenedor">
 
         <img class="imgQuehacemos" src="../imagenes/tortuguita.jpeg" alt="tortuga">
-        <div class="centrado3">Generamos consciencia</div>
+        <div class="centrado3"> <p>Generamos consciencia </p> </div>
     
         <div class="informacionDerecha">
              <h1>Porque todo va al agua</h1>
