--- a/paginas/quienessomos.html
+++ b/paginas/quienessomos.html
@@ -28,7 +28,7 @@
     <div class="contenedor">
 
         <img class="imgQuehacemos" src="../imagenes/corales.jpeg" alt="elefante">
-        <div class="centrado3"> <p> millón de conexiones </p> </div>
+        <div class="centrado3"> <p>Un millón de conexiones </p> </div>
     
         <div class="informacionDerecha">
 
