--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <img class="imgFocas" src="imagenes/focas2.jpg" alt="foca">
   
     <div class="centrado"> 
-      <p>Donde hay agua, hay vida</p>
+      <h1>Donde hay agua, hay vida</h1>
     </div>
 
 
