--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -64,8 +64,27 @@
 
 <div class="contenedor2">
     
-  <img class="imgOceano" src="../imagenes/oceano2.jpg" alt="mar">
-
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="img-fluid" src="../imagenes/ocean.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img class="img-fluid" src="../imagenes/hielo.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img class="img-fluid" src="../imagenes/estrella.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 <h1 class="textomodificado">Todo llega al agua</h1>
 
  
