--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -98,8 +98,9 @@
     <p class="titularfooter"> F.Salinas 2022 </p>
 
     <div class="redes">
-    <a href="instagram">Instagram</a>
-    <a href="facebook">Facebook</a>
+        <a class="link-info" href="instagram">Instagram</a> 
+        <a class="link-info" href="facebook">Facebook</a> 
+ 
   </div>
   
    </footer>
