--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -24,20 +24,7 @@
       <li> <a href="contacto.html">Contacto</a> </li>
     </ul>
 
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
+
 
 </div>
 
@@ -133,8 +120,9 @@
             <p class="titularfooter"> F.Salinas 2022 </p>
         
             <div class="redes">
-            <a href="instagram">Instagram</a>
-            <a href="facebook">Facebook</a>
+            <a class="link-info" href="instagram">Instagram</a> 
+       <a class="link-info" href="facebook">Facebook</a> 
+
           </div>
           
            </footer>
