--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -42,8 +42,8 @@
 
 
     <div class="contenedor">
-
-        <img class="imgQuehacemos" src="../imagenes/tortuguita.jpeg" alt="tortuga">
+<div class="container-fluid">
+        <img class="imgFocas" src="../imagenes/tortuguita.jpeg" alt="tortuga">
         <div class="centrado3"> <h1> Generamos consciencia </h1> </div>
     
         <div class="informacionDerecha">
@@ -65,7 +65,7 @@
            <a href="../index.html">Ir al home</a> 
            </p>
          </div>
-
+        </div>
     </div>
 
 
