--- a/paginas/unete.html
+++ b/paginas/unete.html
@@ -73,7 +73,7 @@
 
     <div class="contenedor2">
     
-      <iframe width="320" height="500" src="https://www.youtube.com/embed/gjaSlAP9LQQ?controls=0&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+      <iframe class="video" width="320" height="500" src="https://www.youtube.com/embed/gjaSlAP9LQQ?controls=0&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
       picture-in-picture" allowfullscreen></iframe>
        
       </div>
