--- a/index.html
+++ b/index.html
@@ -9,96 +9,105 @@
   <link rel="shortcut icon" href="imagenes/drop.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles2.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 
 </head>
 
 <body>
-
-  <div class="gridContainer">
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">CuidaElAgua</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-              <li class="nav-item"> <a class="nav-link" aria-current="page" href="paginas/quehacemos.html">Qué
-                  hacemos</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="paginas/quienessomos.html">Quiénes somos</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="paginas/unete.html">Únete</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="paginas/aporta.html">Aporta</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="paginas/contacto.html">Contacto</a> </li>
-
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-
-    <div class="contenedor">
-      <img class="imgFocas" src="imagenes/focas2.jpg" alt="foca">
-      <h1 class="centrado">Donde hay agua, hay vida</h1>
-
-    </div>
-
-
-    <div class="contenedor2">
-      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="./imagenes/ocean.jpg" class="d-block w-100" alt="...">
-
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./imagenes/hielo.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./imagenes/estrella.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">CuidaElAgua</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/quehacemos.html">Qué Hacemos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/unete.html">Únete</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/aporta.html">Aporta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+          </li>
+        </ul>
       </div>
-
-      <h2 class="textomodificado">Todo llega al agua</h2>
-
     </div>
+  </nav>
 
 
-    <footer>
-
-      <p class="titularfooter"> F.Salinas 2022 </p>
-      <div class="redes">
-        <a href="instagram">Instagram</a>
-        <a href="facebook">Facebook</a>
-
-
+  <div class="image-container">
+    <img src="imagenes/focas2.jpg" alt="Snow" style="width:100%;">
+    <h1 class="centered-text">El agua es vida</h1>
+  </div> 
+ 
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./imagenes/ocean.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Es movimiento</h5>
+          <p>Siendo parte de más del 80% de la superficie terrestre</p>
+        </div>
       </div>
-
-
-    </footer>
+      <div class="carousel-item">
+        <img src="./imagenes/estrella.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Es un hogar</h5>
+          <p>En ella viven, miles de millones de especies y con ellas nosotros</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./imagenes/hielo.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Es parte de nuestro hogar</h5>
+          <p>Sin ella nada de lo que somos es posible.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 
 
-  <script src="js/wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
+
+</div>
+
+  <footer class="text-center p-5">
+
+    <span>  Fran Salinas 2022  </span>
+    <a href="instagram">Instagram</a>
+    <a href="facebook">Facebook</a>
+
+  </footer>
+
+
+</div>
+  
+
+
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
