--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid mx-5">
       <a class="navbar-brand" href="#">CuidaElAgua</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -92,18 +92,14 @@
 
 
 
-</div>
 
-  <footer class="text-center p-5">
+<footer class="text-center p-3 fixed-bottom">
 
-    <span>  Fran Salinas 2022  </span>
-    <a href="instagram">Instagram</a>
-    <a href="facebook">Facebook</a>
+  <span>  Fran Salinas 2022  </span>
+  <a href="instagram">Instagram</a>
+  <a href="facebook">Facebook</a>
 
-  </footer>
-
-
-</div>
+</footer>
   
 
 
