--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -15,7 +15,7 @@
 <body class="text-center">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid mx-5">
       <a class="navbar-brand" href="#">CuidaElAgua</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,19 +23,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/paginas/quehacemos.html">Qué Hacemos</a>
+            <a class="nav-link" href="quehacemos.html">Qué Hacemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/paginas/unete.html">Únete</a>
+            <a class="nav-link" href="unete.html">Únete</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Aporta</a>
+            <a class="nav-link" href="">Aporta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/paginas/aporta.html">Contacto</a>
+            <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
         </ul>
       </div>
@@ -99,9 +99,10 @@
       </div>
     </div>
 </div>
+</div>
+<br><br><br>
 
-
-<footer class="text-center p-5">
+<footer class="text-center p-3 mt-5 fixed-bottom">
 
   <span>  Fran Salinas 2022  </span>
   <a href="instagram">Instagram</a>
