--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,9 +14,8 @@
 </head>
 <body>
 
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid mx-5">
       <a class="navbar-brand" href="#">CuidaElAgua</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,19 +23,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/paginas/quehacemos.html">Qué Hacemos</a>
+            <a class="nav-link" href="quehacemos.html">Qué Hacemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aporta.html">Únete</a>
+            <a class="nav-link" href="unete.html">Únete</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="paginas/aporta.html">Aporta</a>
+            <a class="nav-link" href="aporta.html">Aporta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="">Contacto</a>
           </li>
         </ul>
       </div>
@@ -44,6 +43,7 @@
   </nav>
 
 
+<div class="container">
   <h1 class="text-center text-white mt-5">¡Hablemos!</h1>
 
   <div class="mb-3 m-5">
@@ -56,6 +56,7 @@
   </div>
 
   <button type="button" class="btn btn-info m-5">Enviar</button>
+</div>
  
 <br>
 <br>
@@ -68,13 +69,13 @@
   </div> 
 
 
-  <footer class="text-center p-5">
+<footer class="text-center p-3">
 
-    <span>  Fran Salinas 2022  </span>
-    <a href="instagram">Instagram</a>
-    <a href="facebook">Facebook</a>
+  <span>  Fran Salinas 2022  </span>
+  <a href="instagram">Instagram</a>
+  <a href="facebook">Facebook</a>
 
-  </footer>
+</footer>
 
 
 
