--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles2.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     
 </head>
@@ -104,7 +104,7 @@
 
 <footer class="text-center p-3 mt-5 fixed-bottom">
 
-  <span>  Fran Salinas 2022  </span>
+  <span> <a href="../index.html"> Fran Salinas 2022 </a> </span>
   <a href="instagram">Instagram</a>
   <a href="facebook">Facebook</a>
 
