--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./imagenes/ocean.jpg" class="d-block w-100" alt="...">
+        <img src="./imagenes/ocean.jpg" class="d-block w-100" alt="oceano">
         <div class="carousel-caption d-none d-md-block">
           <h5>Es movimiento</h5>
           <p>Siendo parte de más del 80% de la superficie terrestre</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagenes/estrella.jpg" class="d-block w-100" alt="...">
+        <img src="./imagenes/estrella.jpg" class="d-block w-100" alt="estrella.">
         <div class="carousel-caption d-none d-md-block">
           <h5>Es un hogar</h5>
           <p>En ella viven, miles de millones de especies y con ellas nosotros</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagenes/hielo.jpg" class="d-block w-100" alt="...">
+        <img src="./imagenes/hielo.jpg" class="d-block w-100" alt="hielo">
         <div class="carousel-caption d-none d-md-block">
           <h5>Es parte de nuestro hogar</h5>
           <p>Sin ella nada de lo que somos es posible.</p>
