--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -58,13 +58,9 @@
 
  <button type="button" class="btn btn-primary mt-5 text-white">Aporta</button>
 
- <br>
- <br>
- <br>
- <br>
 
 
-<h3 class="text-white">Reservas y parques</h3>
+<h3 class="text-white m-5">Reservas y parques</h3>
 
  <div class="container pt-3">
   <div class="row">
