--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -46,7 +46,7 @@
 
 
 
-<div class="container mt-3">
+<div class="container m-5">
       <h1 class="fw-bold text-white">Generamos Consciencia</h1>
       <div class="card mb-3 mt-5">
       <img src="../imagenes/elefante.jpeg" class="card-img-top" alt="...">
@@ -67,17 +67,14 @@
       <img src="../imagenes/delfin.jpeg" class="card-img-bottom" alt="...">
     </div>
     
-    <br>
-    <br>
+    
 
-<div class="text-white mt-3">
+<div class="text-white mt-3 mb-5">
   <h1>La información es poder</h1>
   <p> La hiperconexión nos ha permitido llegar a personas de <span class="destacado">los continentes y reunirnos sin importar las fronteras </span> , con un solo fin, <span class="destacado">el agua y la vida en ella.</span> </p>
 </div>
 
-<br>
-<br>
-<br>
+
 
 <h3 class="text-white m-3">Pequeños grandes logros</h3>
 
