--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -55,7 +55,7 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 
-  <button type="button" class="btn btn-info m-5">Enviar</button>
+  <button type="button" class="btn btn-primary m-5">Enviar</button>
 </div>
  
 
