--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuídala</title>
+    <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
+    <meta name="description" content="Buscamos conectar a las personas con el agua y conscientizar">
+    <title>¿Qué hacemos?</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
@@ -46,10 +48,10 @@
 
 
 
-<div class="container m-5">
+<div class="container m-5" style="max-width: 80%;">
       <h1 class="fw-bold text-white">Generamos Consciencia</h1>
       <div class="card mb-3 mt-5">
-      <img src="../imagenes/elefante.jpeg" class="card-img-top" alt="...">
+      <img src="../imagenes/elefante.jpeg" class="card-img-top" alt="elefante">
       <div class="card-body">
         <h5 class="card-title subrayado">Porque todo va al agua</h5>
         <p class="card-text">Buscamos conectar a las personas con el agua y conscientizar de la importancia de cuidarla, a través de acciones, 
@@ -64,21 +66,21 @@
           respecto al medioambiente y sus recursos.</p>
         <p class="card-text"><small class="text-muted">Somos el pequeño grano de arena</small></p>
       </div>
-      <img src="../imagenes/delfin.jpeg" class="card-img-bottom" alt="...">
+      <img src="../imagenes/delfin.jpeg" class="card-img-bottom" alt="delfin">
     </div>
     
     
 
 <div class="text-white mt-3 mb-5">
   <h1>La información es poder</h1>
-  <p> La hiperconexión nos ha permitido llegar a personas de <span class="destacado">los continentes y reunirnos sin importar las fronteras </span> , con un solo fin, <span class="destacado">el agua y la vida en ella.</span> </p>
+  <p> La hiperconexión nos ha permitido llegar a personas de <span class="destacado">los continentes y reunirnos sin importar las fronteras, </span>  con un solo fin, <span class="destacado">el agua y la vida en ella.</span> </p>
 </div>
 
 
 
 <h3 class="text-white m-3">Pequeños grandes logros</h3>
 
-<table class="table caption-top text-white m-5">
+<table class="table caption-top text-white m-5>
 
   <thead>
     <tr>
