--- a/paginas/unete.html
+++ b/paginas/unete.html
@@ -52,14 +52,14 @@
   <form class="row g-3 needs-validation m-3 text-white" novalidate>
     <div class="col-md-4">
       <label for="validationCustom01" class="form-label">Nombre</label>
-      <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+      <input type="text" class="form-control" id="validationCustom01" value="" required>
       <div class="valid-feedback">
         Súper!
       </div>
     </div>
     <div class="col-md-4">
       <label for="validationCustom02" class="form-label">Apellido</label>
-      <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+      <input type="text" class="form-control" id="validationCustom02" value="" required>
       <div class="valid-feedback">
         Súper!
       </div>
