--- a/paginas/unete.html
+++ b/paginas/unete.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuídala</title>
+    <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
+  <meta name="description" content="Puedes ser parte del cambio">
+    <title>Únete</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
@@ -146,7 +148,7 @@
          <img src="../imagenes/Porelagua.png" class="card-img-top" alt="...">
          <div class="card-body">
            <h5 class="card-title subrayado">Agua 2022</h5>
-           <p class="card-text"> Un evento para conscientizar del uso del agua y creación de políticas públicas </p>
+           <p class="card-text"> Un evento para conscientizar del uso del agua y creación de políticas públicas. </p>
       
          </div>
        </div>
