--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
+    <meta name="keywords" content="cambio, todo suma, aporta, comparte, parques nacionales, dona, fauna, animales, especies">
     <meta name="description" content="Puedes ayudar de la forma que tú desees.">
-    <title>Aporta</title>
+    <title>Cuida el agua - Aporta</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
@@ -68,7 +68,7 @@
   <div class="row">
     <div class="col-md-4 col-12 mt-3">
       <div class="card w-100" style="width: 18rem;">
-        <img src="../imagenes/Cerro_Paine_Grande.jpeg" class="card-img-top" alt="TorresDelPaine">
+        <img src="../imagenes/Cerro_Paine_Grande.jpeg" class="card-img-top" alt="Torres del Paine">
         <div class="card-body">
           <h5 class="card-title">Parque Nacional Torres del Paine</h5>
           <p class="card-text">Destaca por la protección de más de 25 especies de fauna y 274 especies de plantas.</p>
@@ -88,7 +88,7 @@
     </div>
     <div class="col-md-4 col-12 mt-3">
       <div class="card w-100" style="width: 18rem;">
-        <img src="../imagenes/parque-nacional-la-campana.jpeg" class="card-img-top" alt="...">
+        <img src="../imagenes/parque-nacional-la-campana.jpeg" class="card-img-top" alt="Parque nacional">
         <div class="card-body">
           <h5 class="card-title">Parque Nacional Lauca </h5>
           <p class="card-text">Donde viven más de 130 diferentes especies de aves como vicuñas, vizcachas y cóndores.</p>
