--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuídala</title>
+    <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
+    <meta name="description" content="Lo que necesites, te leemos o escuchamos">
+    <title>Contáctanos</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
@@ -61,8 +63,8 @@
 
 
  <div class="image-container">
-    <img src="../imagenes/polar.jpg" alt="Snow" style="width:100%;">
-    <h1 class="centered-text">El agua es vida</h1>
+    <img src="../imagenes/polar.jpg" alt="Polar" style="width:100%;">
+    <h1 class="centered-text mt-5">El agua es vida</h1>
 
   </div> 
 
