--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cuídala</title>
+  <meta name="keywords" content="agua, cuida el agua, vida, conciencia, hogar, cambio, medioambiente">
+  <meta name="description" content="Queremos informar y empoderar a las personas sobre el cuidado del agua">
+  <title>Cuida el agua ONG</title>
   <link rel="shortcut icon" href="imagenes/drop.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -48,7 +50,7 @@
 
   <div class="image-container">
     <img src="imagenes/focas2.jpg" alt="Snow" style="width:100%;">
-    <h1 class="centered-text">El agua es vida</h1>
+    <h1 class="centered-text mt-5">El agua es vida</h1>
   </div> 
  
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -57,7 +59,7 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner d-block">
+    <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="./imagenes/ocean.jpg" class="d-block w-100" alt="oceano">
         <div class="carousel-caption d-block d-md-block">
@@ -75,7 +77,7 @@
       <div class="carousel-item">
         <img src="./imagenes/hielo.jpg" class="d-block w-100" alt="hielo">
         <div class="carousel-caption d-block d-md-block">
-          <h5>Es parte de nuestro hogar</h5>
+          <h5>Es nuestra vida</h5>
           <p>Sin ella nada de lo que somos es posible.</p>
         </div>
       </div>
