--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
-    <meta name="description" content="Buscamos conectar a las personas con el agua y conscientizar">
+    <meta name="description" content="Buscamos conectar a las personas con el agua y concientizar">
     <title>¿Qué hacemos?</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -80,7 +80,7 @@
 
 <h3 class="text-white m-3">Pequeños grandes logros</h3>
 
-<table class="table caption-top text-white m-5>
+<table class="table caption-top text-white m-5">
 
   <thead>
     <tr>
