--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -80,15 +80,15 @@
       <div class="card w-100" style="width: 18rem;">
         <img src="../imagenes/Pinguinos_reserva.jpeg" class="card-img-top" alt="ReservaHumboldt">
         <div class="card-body">
-          <h5 class="card-title">Reserva Nacional Pinguino de Humboldt</h5>
-          <p class="card-text">Formada por tres islas que conforman diferentes especies de pinguinos y flora única</p>
+          <h5 class="card-title">Reserva Pinguino de Humboldt</h5>
+          <p class="card-text">Formada por tres islas que conforman diferentes especies de pinguinos y flora única.</p>
           <a href="#" class="btn btn-primary">Dona</a>
         </div>
       </div>
     </div>
     <div class="col-md-4 col-12 mt-3">
       <div class="card w-100" style="width: 18rem;">
-        <img src="../imagenes/parque-nacional-la-campana.jpeg" class="card-img-top" alt="Parque nacional">
+        <img src="../imagenes/chungara.jpeg" class="card-img-top" alt="Parque nacional">
         <div class="card-body">
           <h5 class="card-title">Parque Nacional Lauca </h5>
           <p class="card-text">Donde viven más de 130 diferentes especies de aves como vicuñas, vizcachas y cóndores.</p>
@@ -100,11 +100,12 @@
 </div>
 <br><br><br>
 
-<footer class="text-center p-3 mt-5 fixed-bottom">
+<footer class="text-center p-3">
 
-  <span> <a href="../index.html"> Fran Salinas 2022 </a> </span>
-  <a href="instagram">Instagram</a>
-  <a href="facebook">Facebook</a>
+  <a href="instagram.com"><img class="imgredes" style="height:40px;" src="/imagenes/instagram-gris.png" alt="instagram"></a>
+  <a href="facebook.com"><img class="imgredes" style="height: 36px;" src="/imagenes/fb-gris.png" alt="facebook"> </a>
+  <p class="m-1 small"> <a href="#">Fran Salinas 2022 </a>  </p>
+  
 
 </footer>
 
