--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="agua, cuida el agua, vida, conciencia, hogar, cambio, medioambiente">
+  <meta name="keywords" content="agua, cuida el agua, vida, consciencia, hogar, cambio, medio ambiente">
   <meta name="description" content="Queremos informar y empoderar a las personas sobre el cuidado del agua">
-  <title>Cuida el agua ONG</title>
+  <title>Cuida el agua - Inicio</title>
   <link rel="shortcut icon" href="imagenes/drop.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -49,7 +49,7 @@
 
 
   <div class="image-container">
-    <img src="imagenes/focas2.jpg" alt="Snow" style="width:100%;">
+    <img src="imagenes/focas2.jpg" alt="focas" style="width:100%;">
     <h1 class="centered-text mt-5">El agua es vida</h1>
   </div> 
  
@@ -61,24 +61,24 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./imagenes/ocean.jpg" class="d-block w-100" alt="oceano">
+        <img src="./imagenes/ocean.jpg" class="d-block w-100" style="height: 300px;" alt="oceano">
         <div class="carousel-caption d-block d-md-block">
-          <h5>Es movimiento</h5>
-          <p>Siendo parte de más del 80% de la superficie terrestre</p>
+          <h5 class="m-3">Es movimiento</h5>
+          <p class="mb-5">Siendo parte de más del 80% de la superficie terrestre</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagenes/estrella.jpg" class="d-block w-100" alt="estrella.">
+        <img src="./imagenes/estrella.jpg" class="d-block w-100" style="height: 300px;" alt="estrella">
         <div class="carousel-caption d-block d-md-block">
-          <h5>Es un hogar</h5>
-          <p>En ella viven, miles de millones de especies y con ellas nosotros</p>
+          <h5 class="m-3">Es un hogar</h5>
+          <p class="mb-5">En ella viven miles de millones de especies y con ellas nosotros</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./imagenes/hielo.jpg" class="d-block w-100" alt="hielo">
+        <img src="./imagenes/hielo.jpg" class="d-block w-100" style="height: 300px;" alt="hielo">
         <div class="carousel-caption d-block d-md-block">
-          <h5>Es nuestra vida</h5>
-          <p>Sin ella nada de lo que somos es posible.</p>
+          <h5 class="m-3">Es nuestra vida</h5>
+          <p class="mb-5">Sin ella nada de lo que somos es posible.</p>
         </div>
       </div>
     </div>
@@ -95,11 +95,12 @@
 
 
 
-<footer class="text-center p-3 fixed-bottom">
+<footer class="text-center p-3">
 
-  <span> <a href="#">Fran Salinas 2022 </a>  </span>
-  <a href="instagram">Instagram</a>
-  <a href="facebook">Facebook</a>
+  <a href="instagram.com"><img class="imgredes" style="height:40px;" src="/imagenes/instagram-gris.png" alt="instagram"></a>
+  <a href="facebook.com"><img class="imgredes" style="height: 36px;" src="/imagenes/fb-gris.png" alt="facebook"> </a>
+  <p class="m-1 small text-center"> <a href="#">Fran Salinas 2022 </a>  </p>
+  
 
 </footer>
   
