--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
+    <meta name="keywords" content="haz un cambio, sé parte, el agua es vida, cuida el agua">
     <meta name="description" content="Lo que necesites, te leemos o escuchamos">
-    <title>Contáctanos</title>
+    <title>Cuida el agua - Contáctanos</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
@@ -69,14 +69,15 @@
   </div> 
 
 
-<footer class="text-center p-3">
 
-  <span> <a href="../index.html"> Fran Salinas 2022 </a> </span>
-  <a href="instagram">Instagram</a>
-  <a href="facebook">Facebook</a>
+  <footer class="text-center p-3">
 
-</footer>
-
+    <a href="instagram.com"><img class="imgredes" style="height:40px;" src="/imagenes/instagram-gris.png" alt="instagram"></a>
+    <a href="facebook.com"><img class="imgredes" style="height: 36px;" src="/imagenes/fb-gris.png" alt="facebook"> </a>
+    <p class="m-1 small"> <a href="#">Fran Salinas 2022 </a>  </p>
+    
+  
+  </footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
