--- a/paginas/quehacemos.html
+++ b/paginas/quehacemos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="agua, cuida el agua, vida, conciencia, cambio, medioambiente, ong, futuro, animales">
+    <meta name="keywords" content="ONG, futuro, animales, crisis climática, recursos, consciencia, grano de arena, cambio, agua">
     <meta name="description" content="Buscamos conectar a las personas con el agua y concientizar">
-    <title>¿Qué hacemos?</title>
+    <title>Cuida el agua - ¿Qué hacemos?</title>
     <link rel="shortcut icon" href="/imagenes/drop.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
@@ -48,21 +48,21 @@
 
 
 
-<div class="container m-5" style="max-width: 80%;">
+<div class="container m-5 mx-auto" style="max-width: 80%;">
       <h1 class="fw-bold text-white">Generamos Consciencia</h1>
       <div class="card mb-3 mt-5">
-      <img src="../imagenes/elefante.jpeg" class="card-img-top" alt="elefante">
+      <img src="../imagenes/elefante.jpeg" class="card-img-top" alt="elefante marino">
       <div class="card-body">
         <h5 class="card-title subrayado">Porque todo va al agua</h5>
-        <p class="card-text">Buscamos conectar a las personas con el agua y conscientizar de la importancia de cuidarla, a través de acciones, 
-          reuniones y un espacio donde pueden aprender interactuar, viajar, compartir.</p>
+        <p class="card-text">Buscamos conectar a las personas con el agua y conscientizar de la importancia de cuidarla a través de acciones, 
+          reuniones y un espacio donde puedan aprender interactuar, viajar y compartir.</p>
         <p class="card-text"><small class="text-muted">Un paso a la vez</small></p>
       </div>
     </div>
     <div class="card">
       <div class="card-body">
         <h5 class="card-title text-black subrayado">Nuestra historia</h5>
-        <p class="card-text">Tú, cuida el agua, nace el año 2022 ante la crisis climática y las nulas esperanzas de que las empresas tomen consciencia del daño medioambiental que generan, con el fin de informar y empoderar a las personas
+        <p class="card-text">Tú, cuida el agua nace el año 2022 ante la crisis climática y las nulas esperanzas de que las empresas tomen consciencia del daño medioambiental que generan, con el fin de informar y empoderar a las personas
           respecto al medioambiente y sus recursos.</p>
         <p class="card-text"><small class="text-muted">Somos el pequeño grano de arena</small></p>
       </div>
@@ -73,14 +73,14 @@
 
 <div class="text-white mt-3 mb-5">
   <h1>La información es poder</h1>
-  <p> La hiperconexión nos ha permitido llegar a personas de <span class="destacado">los continentes y reunirnos sin importar las fronteras, </span>  con un solo fin, <span class="destacado">el agua y la vida en ella.</span> </p>
+  <p> La hiperconexión nos ha permitido llegar a personas de <span class="destacado">diferentes continentes y reunirnos sin importar las fronteras, </span>  con un solo fin, <span class="destacado">el agua y la vida en ella.</span> </p>
 </div>
 
 
 
-<h3 class="text-white m-3">Pequeños grandes logros</h3>
+<h3 class="text-white m-3 mx-auto">Pequeños grandes logros</h3>
 
-<table class="table caption-top text-white m-5">
+<table class="table caption-top text-white m-5 mx-auto">
 
   <thead>
     <tr>
@@ -117,14 +117,15 @@
 </div>
 
 
-<footer class="text-center p-3 mt-5">
 
-  <span> <a href="../index.html"> Fran Salinas 2022 </a> </span>
-  <a href="instagram">Instagram</a>
-  <a href="facebook">Facebook</a>
+<footer class="text-center p-3">
+
+  <a href="instagram.com"><img class="imgredes" style="height:40px;" src="/imagenes/instagram-gris.png" alt="instagram"></a>
+  <a href="facebook.com"><img class="imgredes" style="height: 36px;" src="/imagenes/fb-gris.png" alt="facebook"> </a>
+  <p class="m-1 small"> <a href="#">Fran Salinas 2022 </a>  </p>
+  
 
 </footer>
-
            
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         
