--- a/paginas/aporta.html
+++ b/paginas/aporta.html
@@ -102,8 +102,8 @@
 
 <footer class="text-center p-3">
 
-  <a href="instagram.com"><img class="imgredes" style="height:40px;" src="/imagenes/instagram-gris.png" alt="instagram"></a>
-  <a href="facebook.com"><img class="imgredes" style="height: 36px;" src="/imagenes/fb-gris.png" alt="facebook"> </a>
+  <a href="instagram.com"><img class="imgredes" style="height:40px;" src="../imagenes/instagram-gris.png" alt="instagram"></a>
+  <a href="facebook.com"><img class="imgredes" style="height: 36px;" src="../imagenes/fb-gris.png" alt="facebook"> </a>
   <p class="m-1 small"> <a href="#">Fran Salinas 2022 </a>  </p>
   
 
